# git_statistics

./: .gitignore  CLAUDE.md  GEMINI.md  QWEN.md  README.md  index.html  package-lock.json  package.json  项目需求.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  git_analyzer.rs  main.rs  models.rs
src/components/: CommitDetailPage.tsx  RepositoryManager.tsx  StatisticsCharts.tsx  Timeline.tsx
src/types/: index.ts
src/utils/: gitUrlConverter.ts
