[package]
name = "git-statistics"
version = "1.0.4"
description = "Git Commit 统计桌面应用"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
anyhow = "1.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
